<resources>
    <string name="app_name">ActiMate</string>
    <string name="url">https://actimate.herokuapp.com"</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password should be at least 6 characters long and should contain both uppercase and lowercase characters and a number</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_incorrect_email">Email is incorrect</string>
    <string name="error_already_registered">This email address is already in use</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_server">There has been a problem with the server. Please try again later.</string>
    <string name="error_no_connection">This action requires network access. Please connect to a nearby WiFi or enable data traffic.</string>

    <!-- Strings related to profile -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="language">Language</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="introduction">Introduction</string>
    <string name="save">Save</string>
    <string name="profile_success">Profile has been updated</string>
    <string name="profile_fail">There has been an unexpected error</string>

    <!-- Strings related to interests -->
    <string name="ballGames">Ball Games</string>
    <string name="boardGames">Board Games</string>
    <string name="cultural">Cultural</string>
    <string name="eSports">E-sports</string>
    <string name="indoorSports">Indoor Sports</string>
    <string name="outdoorActivity">Outdoor Activities</string>
    <string name="outdoorSports">Outdoor Sports</string>
    <string name="waterSports">Water Sports</string>
    <string name="winterSports">Winter Sports</string>
    <string name="other">Other</string>

    <string-array name="interests">
        <item>@string/ballGames</item>
        <item>@string/boardGames</item>
        <item>@string/cultural</item>
        <item>@string/eSports</item>
        <item>@string/indoorSports</item>
        <item>@string/outdoorActivity</item>
        <item>@string/outdoorSports</item>
        <item>@string/waterSports</item>
        <item>@string/winterSports</item>
        <item>@string/other</item>
    </string-array>

    <!-- Strings related to creating new event -->
    <string name="name_of_event">Name of the event</string>
    <string name="event_where">Place of the event</string>
    <string name="event_amount_of_participants">How many participants?</string>
    <string name="create">Create</string>
    <string name="event_description">About the event</string>
    <string name="activity_spinner_options">Select an activity</string>
    <string name="set_time">Time</string>
    <string name="set_date">Date</string>
    <string name="event_success">Event has been created</string>
    <string name="event_fail">There has been an unexpected error</string>
    <string name="error_missing_fields">Please fill out all the fields to continue</string>



    <!-- Strings related to menu -->
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="home">Home page</string>
    <string name="new_event">Create new event</string>

    <!-- Strings related to event cards -->
    <string name="event_card_name">Name:</string>
    <string name="event_card_activity">Activity:</string>
    <string name="event_card_date">Date:</string>
    <string name="event_card_location">Location:</string>




</resources>
