<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/teaGreenLight">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_edit_profile"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context="com.codecool.actimate.view.AddNewEventActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginBottom="25dp"
                android:id="@+id/name_of_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_event"
                android:maxLines="1"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/activity_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/activity_spinner_options"
            android:layout_marginBottom="25dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/location_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint="@string/event_where"
                android:inputType="textAutoComplete"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">
            <Button
                android:id="@+id/date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_date"
                android:onClick="showDatePickerDialog"
                android:layout_weight="1"
                android:background="@color/tealBlue"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/time_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_time"
                android:onClick="showTimePickerDialog"
                android:layout_weight="1"
                android:background="@color/tealBlue"
                android:textColor="@color/white"/>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginBottom="25dp"
                android:id="@+id/event_amount_of_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_amount_of_participants"
                android:maxLines="1"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginBottom="25dp"
                android:id="@+id/introduction"
                android:inputType="textMultiLine"
                android:lines="4"
                android:minLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_description" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/create_event"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/create"
            android:textStyle="bold"
            android:background="@color/tealBlue"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
